add registry list in master
